--- a/index.css
+++ b/index.css
@@ -624,11 +624,16 @@ body {
   width: 5px;
   height: 5px;
   top: -14px;
-  left: 54%;
+  left: 52.1%;
   z-index: 5;
   border-radius: 50% 50%;
   background: #000;
 }
+
+.dark-mode .swing:before {
+  background: #dcdde1;
+}
+
 
 @keyframes swing {
   0% {
